--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"version": "1.0.0",
 	"description": "Sample description",
 	"short_name": "teleport_now",
-	"permissions": ["activeTab", "declarativeContent", "storage", "<all_urls>"],
+	"permissions": ["activeTab", "tabs", "declarativeContent", "storage", "<all_urls>"],
 	"browser_action": {
 		"default_popup": "popup.html",
 		"default_icon": "icons/icon16.png"
